  the end of the heading element instead of the beginning. Client-side code and
  screen-scrapers will have to be adjusted to handle both cases (old HTML will
  still be visible on cached page renders until they are purged); extensions
  using the DoEditSectionLink or EditSectionLink hooks might need adjustments as
  well.

=== Bug fixes in 1.22 ===
* Disable Special:PasswordReset when $wgEnableEmail. Previously one could still
  navigate to the page by entering the URL directly.
* (bug 47138) Fixed a fatal error when a blocked user tries to automatically
  create an account on login due external authentication in some circumstances.
* (bug 23393) HTML <hN> headings containing line breaks are now handled
  correctly.
* (bug 45803) Whitespace within == Headline == syntax and within <hN> headings
  is now non-significant and not preserved in the HTML output.
* (bug 47218) Special:BlockList now handles correctly user names with spaces
  when passed as subpage.
* Pager's properly validate which fields are allowed to be sorted on.
* mw.util.tooltipAccessKeyRegexp: The regex now matches "option-" as well.
  Support for Mac "option" was added in 1.16, but the regex was never updated.
* (bug 46768) Usernames of blocking users now display correctly, even if numeric.
* (bug 39590) {{PAGESIZE}} for the current page and self-transclusions now
  show the most up to date result always instead of being a revision behind.
* A bias in wfRandomString() toward digits 1-7 has been corrected. Generated
  strings now can start with digits 0 and 8-f.

=== API changes in 1.22 ===
* (bug 46626) xmldoublequote parameter was removed. Because of a bug, the
  parameter has had no effect since MediaWiki 1.16, and so its removal is
  unlikely to impact existing clients.
* (bug 25325) Added support for wlshow filtering (bots/anon/minor/patrolled)
  to action=feedwatchlist.
* WDDX formatted output will actually be formatted (and normal output will no